修改直播语音效果

--- a/wechat/src/main/webapp/xcview/html/physician/voice_broadcast.html
+++ b/wechat/src/main/webapp/xcview/html/physician/voice_broadcast.html
@@ -308,13 +308,7 @@
 <script type="text/javascript" src="/xcview/js/common/template.js"></script>    <!--数据模板引入--> 
 <!-- <script type="text/javascript" src="/xcview/js/physician/quiz.js"></script>  -->
 <script type="text/javascript" src="/xcview/js/physician/voice_broadcast.js"></script>
-<!-- 语音直播引用文件 -->
-<script src="https://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
-<script src="https://cdn.bootcss.com/Mock.js/1.0.0/mock-min.js"></script>
-<script src="https://cdn.bootcss.com/hammer.js/2.0.8/hammer.min.js"></script>
-<script src="https://cdn.bootcss.com/lodash.js/4.17.10/lodash.min.js"></script>
-<script src="/xcview/html/physician/voice/js/template.js"></script>
-<script src="/xcview/html/physician/voice/js/main.js"></script>
+
 
 
 <script>
@@ -575,6 +569,14 @@
 	});
 </script>
 
+<!-- 语音直播引用文件开始 -->
+<script src="https://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
+<script src="https://cdn.bootcss.com/Mock.js/1.0.0/mock-min.js"></script>
+<script src="https://cdn.bootcss.com/hammer.js/2.0.8/hammer.min.js"></script>
+<script src="https://cdn.bootcss.com/lodash.js/4.17.10/lodash.min.js"></script>
+<script src="/xcview/html/physician/voice/js/template.js"></script>
+<script src="/xcview/html/physician/voice/js/main.js"></script>
+<!-- 语音直播引用文件结束 -->
 <script>
 	//聊天最大高度
 	var container_height=$(window).height()-$(".main-height").height();
