直播预告--互动直播间，添加诊疗弟子字段。。远程诊疗修改，提示文字

--- a/wechat/src/main/webapp/xcview/html/live_play.html
+++ b/wechat/src/main/webapp/xcview/html/live_play.html
@@ -145,7 +145,13 @@
 	<!--主讲人-->
 	<div class="speak_people" id="speak_people">
 		<script type="text/html" id="data_people">	
-			<p class="speak_title">{{gradeName}}</p>
+			<p class="speak_title">{{gradeName}}</p>			
+			{{if lineState == 2 || lineState == 4 || lineState == 5}}
+				{{if appointmentInfoId !=null}}
+					<p class="" style="color: #666;">诊疗弟子：{{discipleName}}</p>
+				{{/if}}
+			{{/if}}
+
 			<p class="speak-text">{{subtitle}}</p>
 			<div class="wrap_grade" onclick="btn_allComment()">
 				<ul class="grade_pic">
