修改--医案报道添加时间段

--- a/wechat/src/main/webapp/xcview/html/physician/consilia.html
+++ b/wechat/src/main/webapp/xcview/html/physician/consilia.html
@@ -116,6 +116,9 @@
 			{{else if item.typeId == 8}}   <!--医案报道-->
 				<div class="medical_cases">
 					<h2>{{item.title}}</h2>
+					<div class="article_time" style="width: 6.98rem;margin: 0 auto;">
+						<div class="">{{item.createTime}}</div>
+					</div>
 					<div class="consilia_textarea"></div>
 				</div>
 				
