--- a/wechat/src/main/webapp/xcview/html/my_study_course.html
+++ b/wechat/src/main/webapp/xcview/html/my_study_course.html
@@ -165,10 +165,22 @@
 						
 						{{if item.type==1 && item.collection==true}}
 						<!--多少集-->
-						<p class="my_collection">共{{item.courseNumber}}集&nbsp;&nbsp;<!--<span>已更新16集</span>--></p>
+						<p class="my_collection">共{{item.courseNumber}}集&nbsp;&nbsp;<span>已更新
+						{{if item.dirtyNumber == null}}
+							<span class="ji">0</span>
+							{{else}}
+							<span class="ji">{{item.dirtyNumber}}</span>
+						{{/if}}
+						集</span></p>
 						{{else if item.type==2 && item.collection==true}}
 						<!--多少集-->
-						<p class="my_collection">共{{item.courseNumber}}集&nbsp;&nbsp;<!--<span>已更新16集</span>--></p>
+						<p class="my_collection">共{{item.courseNumber}}集&nbsp;&nbsp;<span>已更新
+						{{if item.dirtyNumber == null}}
+							<span class="ji">0</span>
+							{{else}}
+							<span class="ji">{{item.dirtyNumber}}</span>
+						{{/if}}
+						集</span></p>
 						{{else if item.lineState==1}}	
 						<!--直播中-->				
 						<!--<p class="paly_ing" data-id="{{item.id}}" style="position: relative;z-index: 6;"><a href="details.html?courseId={{item.id}}" >直播中</a></p>-->
