--- a/wechat/src/main/webapp/xcview/html/school_audio.html
+++ b/wechat/src/main/webapp/xcview/html/school_audio.html
@@ -34,13 +34,18 @@
 			<!-- 课程类型 1：视频 2：音频 3：直播 4：线下培训班 -->
 			<div id="header">
 				<script type="text/html" id="headers">
-					{{if type == 1}}
-						<p>视频课程</p>
-					{{else if type == 2}}
-						<p>音频课程</p>
+					{{if collection == true}}
+						<p>专辑课程</p>
 					{{else}}
-						<p>课程</p>
+						{{if type == 1}}
+							<p>视频课程</p>
+						{{else if type == 2}}
+							<p>音频课程</p>
+						{{else}}
+							<p>课程</p>
+						{{/if}}
 					{{/if}}
+					
 					
 				</script>
 			</div>
