修改  提交弟子申请后的跳转链接

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -1457,9 +1457,9 @@
 		<div class="disciple_application_states">
 			<div class="disciple_application" onclick="location.href ='/xcview/html/physician/apply_for.html?doctor='+doctorId">在线弟子申请加入</div></div>
 		{{else if items.onlineApprenticeStatus == 2}}
-			<div class="disciple_application_states"><div class="disciple_application" onclick="location.href ='/xcview/html/physician/application_approved.html?doctor='+doctorId">申请已提交，查看信息</div></div>
+			<div class="disciple_application_states"><div class="disciple_applications" onclick="location.href ='/xcview/html/physician/application_approved.html?doctor='+doctorId">申请已提交，查看信息</div></div>
 		{{else if items.onlineApprenticeStatus == 4}}
-			<!--<div class="disciple_application_states"><div class="disciple_application" styles="display: none;">申请已提交</div></div>-->
+			<!--<div class="disciple_application_states"><div class="disciple_applications" styles="display: none;">申请已提交</div></div>-->
 		{{/if}}
 	</script>
 </div>
