--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -537,7 +537,7 @@
 		<div id="mainMenuBarAnchor"></div>
 		<div class="anchor_navigation" id="mainMenuBar">
 			<ul id="mainMenu">
-				<li class="li li_data" id="li-1" style="width:1.13rem;"><span class="span"></span><!-- <span class="span_hide" style="displays:none;">动态</span> --><img src="/xcview/images/drop_down.png" alt="" class="hide0" /></li>
+				<li class="li li_data" id="li-1" style="position: relative;"><span class="span"></span><!-- <span class="span_hide" style="displays:none;">动态</span> --><img src="/xcview/images/drop_down.png" alt="" class="hide0" /></li>
 				<li class="li li_course" id="li-2">直播</li>
 				<li class="li li_prose_origin" id="li-3" onclick="apprenticeInfo()">师承</li>
 				<li class="li li_evaluate" id="li-4">介绍</li>
@@ -1652,11 +1652,11 @@ $(window).bind("scroll", function() {
               $("body").removeClass("body");
               	// 替换文字后，改变3角形的位置
                 var mobile = $(".li_data .span").html();		
-				if(mobile.length<3){
+				/*if(mobile.length<3){
 					$(".li_data img").css("left","1.9rem");
 				}else{
 					$(".li_data img").css("left","1.95rem");
-				};
+				};*/
 				$(".screen_show").hide();
             })
         };
