诊疗直播去掉现在按钮

--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -2650,11 +2650,13 @@
 			    });
 //		  只显示时分秒（hh:mm:ss）格式
 			 jeDate(".start-establish-time",{
-			        format:"hh:mm"
+			        format:"hh:mm",
+			        isToday:false
 			    });
 //		    只显示时分秒（hh:mm:ss）格式
 			jeDate(".end-establish-time",{
-			        format:"hh:mm"
+			        format:"hh:mm",
+			        isToday:false
 			    });
 		});
 
