--- a/wechat/src/main/webapp/xcview/html/physician/application_approved.html
+++ b/wechat/src/main/webapp/xcview/html/physician/application_approved.html
@@ -18,8 +18,9 @@
 	<!-- 弟子申请成功头部开始 -->
 	<header>
 		<div class="header">
-			<!--<div class="return" onclick="location.href='/xcview/html/physician/physicians_page.html?doctor='+doctorId"><img src="/xcview/images/back%20icon.png" alt="" /></div>-->
-			<div class="return" onclick="javascript:history.back(-1);"><img src="/xcview/images/back%20icon.png" alt="" /></div>
+			<div class="return" onclick="location.href='/xcview/html/physician/physicians_page.html?doctor='+doctorId"><img src="/xcview/images/back%20icon.png" alt="" /></div>
+			<!--下面这个返回会返回报名页。不能用==onclick="history.go(-2);"-->
+			<!--<div class="return" onclick="javascript:history.back(-1);"><img src="/xcview/images/back%20icon.png" alt="" /></div>-->
 			<div class="apply_title">成为弟子申请</div>
 		</div>
 	</header>
