隐藏学堂语音直播ui。。分享后判断不是师承课跳转

--- a/wechat/src/main/webapp/xcview/html/home_page.html
+++ b/wechat/src/main/webapp/xcview/html/home_page.html
@@ -234,7 +234,7 @@
             	<!--swiper推荐名师结束-->
 				
             	<!--语音直播开始-->
-            	<div class="voice_broadcast">
+            	<div class="voice_broadcast" style="display:none;">
             		<div class="voice_broadcast_title careful_class">
             			语音直播
             			<img src="/xcview/images/video_review.png" alt="" />
