--- a/wechat/src/main/webapp/xcview/html/salon.html
+++ b/wechat/src/main/webapp/xcview/html/salon.html
@@ -502,7 +502,7 @@ $(function(){
         <div class="video_end_top2" style="display: none;">
             <img src="" alt="" class="smallImgPath" />
             <div class="video_end"></div>
-            <p>直播结束，正在生成回放…</p>
+            <p id="record_none">直播结束，正在生成回放…</p>
             <div class="initiation" onclick="location.href ='/xcview/html/my_study.html'">学习中心</div>
         </div>
         <!--直播结束，正在生成回放提示-->
