修改专辑视频按钮。中医师，点击更多显示隐藏

--- a/wechat/src/main/webapp/xcview/html/live_album.html
+++ b/wechat/src/main/webapp/xcview/html/live_album.html
@@ -149,6 +149,10 @@
 	.ccH5sp{
 		display: none !important;
 	}
+	.ccH5PlayBtn{
+		background: url(/xcview/images/play_btn.png) no-repeat !important;
+	    background-size: 1.2rem 1.2rem !important;
+	}
 </style>
 
 </head>
