--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -2145,7 +2145,14 @@
 							<div class="shopping-list-top">
 								<ul>
 									<li>商品</li>
-									<li></li>
+									<li>
+										<p class="select-sort">
+											<span>价格</span>
+											<span class="glyphicon glyphicon-menu-up sort-top" aria-hidden="true"></span>
+											<span class="glyphicon glyphicon-menu-up sort-bottom" aria-hidden="true"></span>
+										</p>
+										
+									</li>
 									<li></li>
 								</ul>
 							</div>
