直播间--测试视频全屏。。全部评价，测试vivo手机表情兼容

--- a/wechat/src/main/webapp/xcview/html/details.html
+++ b/wechat/src/main/webapp/xcview/html/details.html
@@ -1006,6 +1006,26 @@ $(function(){
     $(".document").click(function(){
         $(".document_ceneter").removeClass("document_ceneter_width");
     });
+
+
+    /*function isFullscreenForNoScroll(){
+        var explorer = window.navigator.userAgent.toLowerCase();
+        if(explorer.indexOf('chrome')>0){
+            if (document.body.scrollHeight === window.screen.height && document.body.scrollWidth === window.screen.width) {
+                alert("全屏0");
+            } else {
+                alert("不全屏");
+            }
+        }else{//IE 9+  fireFox
+            if (window.outerHeight === window.screen.height && window.outerWidth === window.screen.width) {
+                alert("全屏111");
+            } else {
+                alert("不全屏");
+            }
+        }
+    }
+
+    isFullscreenForNoScroll();*/
 </script>
 </html>
 
