--- a/wechat/src/main/webapp/xcview/html/live_play.html
+++ b/wechat/src/main/webapp/xcview/html/live_play.html
@@ -72,13 +72,13 @@
 						<p>直播课程</p>
 					{{else if lineState == 2 || lineState == 4 || lineState == 5}}
 						{{if appointmentInfoId !=null}}
-							<p>远程诊疗直播预告</p>
+							<p>诊疗直播预告</p>
 							{{else}}
 							<p>直播预告</p>
 						{{/if}}
 					{{else if lineState == 3}}
 						{{if appointmentInfoId !=null}}
-							<p>远程诊疗直播回放</p>
+							<p>诊疗直播回放</p>
 							{{else}}
 							<p>直播回放</p>
 						{{/if}}
