--- a/wechat/src/main/webapp/xcview/html/treatment.html
+++ b/wechat/src/main/webapp/xcview/html/treatment.html
@@ -138,10 +138,10 @@
 						{{/if}}
 
 						{{if item.status == 3}}
-							<div style="float: right;width: 2.9rem;">
-							<div class="starting_treatment" style="margin-top: 0.15rem;float: left;border: 1px solid #00BC12;background: none;color: #00bc12;width: 1.31rem;height: 0.54rem;">结束诊疗</div>
-							<div class="starting_treatment" style="margin-top: 0.15rem;">继续诊疗</div>
-						</div>
+							<div style="float: right;width: 2.9rem;display: none !important;">
+								<div class="starting_treatment" style="margin-top: 0.15rem;float: left;border: 1px solid #00BC12;background: none;color: #00bc12;width: 1.31rem;height: 0.54rem;">结束诊疗</div>
+								<div class="starting_treatment" style="margin-top: 0.15rem;">继续诊疗</div>
+							</div>
 						{{/if}}
 						
 						<div class="both"></div>
