--- a/online-web/src/main/webapp/web/html/liveVideo4Vhallyun.html
+++ b/online-web/src/main/webapp/web/html/liveVideo4Vhallyun.html
@@ -97,9 +97,9 @@
 		height: 100% !important;
 	}
 	#myVideo div:first-child{
-		height: 100% !important;
 		/*height: 100% !important;*/
-    	width: 100%;
+		/*height: 100% !important;*/
+    	/*width: 100%;*/
     	/*background: #000;*/
 	}
 	#myVideo video{
@@ -284,8 +284,8 @@
 	
 	/*音量控制按钮*/
 	#myVideo .video-js .vjs-volume-bar{
-		height: 14px !important;
-		margin-top: 12px;
+		/*height: 14px !important;
+		margin-top: 12px;*/
 	}
 	
 	/*进度条*/
