--- a/wechat/src/main/webapp/xcview/html/physician/voice_broadcast.html
+++ b/wechat/src/main/webapp/xcview/html/physician/voice_broadcast.html
@@ -18,6 +18,9 @@
 <link rel="stylesheet" type="text/css" href="/xcview/css/popups.css"/> <!-- 公用弹框 -->
 
 <link rel="stylesheet" href="/xcview/html/physician/voice/style/main.css">
+<!--刷新 -->
+<link rel="stylesheet" href="/xcview/css/minirefresh/minirefresh.css?version=71e5ea2f95&version=71e5ea2f95&version=71e5ea2f95">
+<script type="text/javascript" src="/xcview/js/minirefresh/minirefresh.js?version=db3081c0a1&version=db3081c0a1&version=db3081c0a1"></script>
 
 <script>
 	// 判断横屏展示时的状态
@@ -46,6 +49,36 @@
 	    left: 50%;
 	    margin-left: -3.49rem;
 	    z-index: -1;
+	}
+	.askBackground{
+		background: #F97B49;
+		border-radius: 5px;
+		font-size: 0.24rem;
+		color: #FFFFFF;
+		padding: 0 0.04rem;
+		margin-right: 0.1rem;
+	}
+
+	/*处理刷新*/
+	.minirefresh-wrap{
+		top: 1.1rem;
+	}
+	.minirefresh-theme-default .minirefresh-downwrap{
+		height: 1rem;
+		line-height: 1rem;
+	}
+	.minirefresh-theme-default .downwrap-content{
+		padding: 0;
+	}
+	.minirefresh-theme-default .minirefresh-upwrap{
+		height: 1rem;
+		max-height: 0.5rem;
+		line-height: 0.6rem;
+		padding: 0;
+		/*margin-top: -0.5rem;*/
+	}
+	.minirefresh-scroll{
+		background: none;
 	}
 </style>
 </head>
@@ -244,6 +277,9 @@
 			</div>
 			<div class="comment_area_height"></div>
 			<!-- 评论区 -->
+
+			<div id="minirefresh" class="minirefresh-wrap">
+				<div class="minirefresh-scroll">
 			<div class="comment_area_main">
 				<script type="text/html" id="comment_area_list">
 					{{each items as item i}}
@@ -256,16 +292,22 @@
 						{{/if}}
 
 					</div>
-					<div class="host_response">{{item.content}}</div>
+					<div class="host_response">
+						{{if item.question == true}}
+						<span class="askBackground">问</span>
+						{{/if}}
+						{{item.content}}</div>
 					{{if item.courseLiveAudioDiscussionVO != null}}
 					<div class="respond_questions">
-						<span class="name">辣椒小姐：<span class="ask">问</span>风寒感冒和风热感冒的区别是什么？应该风寒感冒和风热感冒的区别是什么？应该</span>
+						<span class="name">{{item.courseLiveAudioDiscussionVO.name}}：<span class="ask">问</span>{{item.courseLiveAudioDiscussionVO.content}}</span>
 					</div>
 					{{/if}}
 					<div class="time">{{item.createTime}}</div>
 				</div>
 					{{/each}}
 				</script>
+			</div>
+				</div>
 			</div>
 			<!--<div class="comment_area_main">
 				<div class="comment_area_cen">
