--- a/wechat/src/main/webapp/xcview/html/physician/voice_broadcast.html
+++ b/wechat/src/main/webapp/xcview/html/physician/voice_broadcast.html
@@ -80,6 +80,14 @@
 	.minirefresh-scroll{
 		background: none;
 	}
+	/*处理只看问题刷新列表*/
+	#minirefresh .minirefresh-upwrap{
+		margin-bottom: 1.3rem;
+	}
+	#minirefresh .minirefresh-theme-default .status-nomore .upwrap-tips{
+		padding-top: 0;
+		line-height: 0;
+	}
 </style>
 </head>
 <body style="background: #F8F8F8;">
