常看问题--底部没有更多数据--处理css

--- a/wechat/src/main/webapp/xcview/html/physician/voice_broadcast.html
+++ b/wechat/src/main/webapp/xcview/html/physician/voice_broadcast.html
@@ -84,8 +84,8 @@
 	#minirefresh .minirefresh-upwrap{
 		margin-bottom: 1.3rem;
 	}
-	#minirefresh .minirefresh-theme-default .status-nomore .upwrap-tips{
-		padding-top: 0;
+	#minirefresh .upwrap-tips{
+		padding-top: 0 !important;
 		line-height: 0;
 	}
 </style>
