中医师为您推荐清除浮动

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -850,7 +850,7 @@
 		</div>
 
 		<!-- 为您推荐课程开始 -->
-		<div class="wrap_vedio" style="padding-bottom: 0;" id="recommended">
+		<div class="wrap_vedio" style="padding-bottom: 0;overflow: hidden;" id="recommended">
 			<div class="">
 				<span style="font-size: 0.28rem;float: left;">为您推荐</span>
 				<div class="both"></div>
