--- a/wechat/src/main/webapp/xcview/html/apprentice/apply.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/apply.html
@@ -16,6 +16,18 @@
 	<!-- 公用籍贯==3栏地址引入css -->
 	<link href="/xcview/css/address/mui.picker.css" rel="stylesheet" />
 	<link href="/xcview/css/address/mui.poppicker.css" rel="stylesheet" />
+	<style>
+		.birthplace_bg{
+			width: 7.5rem;
+		    height: 100%;
+		    background: #000;
+		    position: fixed;
+		    top: 0;
+		    z-index: 1;
+		    opacity: 0.5;
+		    display: none;
+		}
+	</style>
 </head>
 <body>
 	<!-- 报名头部开始 -->
@@ -133,7 +145,9 @@
 		</div>
 	<!-- 点击学历出现弹窗结束 -->
 	<!-- 中间内容结束 -->
-
+	<!-- 籍贯添加背景开始 -->
+	<div class="birthplace_bg"></div>
+	<!-- 籍贯添加背景结束 -->
 </body>
 <script type="text/javascript" src="/xcview/js/common/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
@@ -174,6 +188,15 @@
 
 
 <script>
+// 点击籍贯  添加背景色
+	$(".birthplace").click(function(){
+		// $(".birthplace_bg").show();
+		if($('.mui-poppicker').is('.mui-active')){
+            $(".birthplace_bg").show();
+        }else{
+        	$(".birthplace_bg").hide();
+        }
+	});
 	//公用籍贯==3栏地址引入
 	// 选择地址
 	(function($, doc) {
