暂时隐藏语音直播。修改默认全部动态添加宽度。专辑--大纲更新提示增加，宽度

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -543,7 +543,7 @@
 		<div id="mainMenuBarAnchor"></div>
 		<div class="anchor_navigation" id="mainMenuBar">
 			<ul id="mainMenu">
-				<li class="li li_data" id="li-1" style="position: relative;"><span class="span"></span><!-- <span class="span_hide" style="displays:none;">动态</span> --><img src="/xcview/images/drop_down.png" alt="" class="hide0" /></li>
+				<li class="li li_data" id="li-1" style="position: relative;width:1.2rem;"><span class="span"></span><!-- <span class="span_hide" style="displays:none;">动态</span> --><img src="/xcview/images/drop_down.png" alt="" class="hide0" /></li>
 				<li class="li li_course" id="li-2">直播</li>
 				<li class="li li_prose_origin" id="li-3" onclick="apprenticeInfo()">师承</li>
 				<li class="li li_evaluate" id="li-4">介绍</li>
@@ -1538,7 +1538,7 @@ $(window).bind("scroll", function() {
 		// 点击直播间
 		$(".li_course").click(function(){
 			$(".baseImagenumbers").hide();
-			$(".anchor_navigation .border").css("left","2.94rem");
+			$(".anchor_navigation .border").css("left","3.03rem");
 			$(".li_data").removeClass("li_color");
 			$(".li_course").addClass("li_color");
 			$(".li_prose_origin").removeClass("li_color");
@@ -1569,7 +1569,7 @@ $(window).bind("scroll", function() {
 		$(".li_prose_origin").click(function(){
 			$("#message_referral").hide();   //介绍结束
 			$(".baseImagenumbers").hide();
-			$(".anchor_navigation .border").css("left","4.59rem");
+			$(".anchor_navigation .border").css("left","4.69rem");
 			$(".li_data").removeClass("li_color");
 			$(".li_course").removeClass("li_color");
 			$(".li_prose_origin").addClass("li_color");
@@ -1596,7 +1596,7 @@ $(window).bind("scroll", function() {
 		// 点击介绍
 		$(".li_evaluate").click(function(){
 			$(".baseImagenumbers").hide();
-			$(".anchor_navigation .border").css("left","6.25rem");
+			$(".anchor_navigation .border").css("left","6.37rem");
 			$(".li_data").removeClass("li_color");
 			$(".li_course").removeClass("li_color");
 			$(".li_prose_origin").removeClass("li_color");
