修改--ios手机直播间视频全屏bug

--- a/wechat/src/main/webapp/xcview/html/details.html
+++ b/wechat/src/main/webapp/xcview/html/details.html
@@ -872,9 +872,14 @@ $(function(){
     
     
 </body>
+<script>
+    window.onload = function(){
+        alert(111);     
+    };
+</script>
 <script src="/xcview/weihoujs/jquery.min.js"></script>
 <script type="text/JavaScript" src="//res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
-<script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
+<!-- <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script> -->
 <script type="text/javascript" src="/xcview/js/common/alertPopShow.js"></script>
 
 
