--- a/wechat/src/main/webapp/xcview/html/live_play.html
+++ b/wechat/src/main/webapp/xcview/html/live_play.html
@@ -41,23 +41,23 @@
 	    border-radius: 4px;
 	}
 	.play_video_hide{
-			width: 2rem;
-		    height: 0.5rem;
-		    line-height: 0.5rem;
-		    font-size: 0.22rem;
-		    color: #fff;
-		    text-align: center;
-		    background: #000;
-		    margin: 0 auto;
-		    /*display: none;*/
-		    position: absolute;
-		    top: 0;
-		    left: 50%;
-		    margin-left: -1rem;
-		    margin-top: 1.8rem;
-		    border-radius: 4px;
-		    opacity: 0.8;
-		}
+		width: 2rem;
+	    height: 0.5rem;
+	    line-height: 0.5rem;
+	    font-size: 0.22rem;
+	    color: #fff;
+	    text-align: center;
+	    background: #000;
+	    margin: 0 auto;
+	    /*display: none;*/
+	    position: absolute;
+	    top: 0;
+	    left: 50%;
+	    margin-left: -1rem;
+	    margin-top: 1.8rem;
+	    border-radius: 4px;
+	    opacity: 0.8;
+	}
 </style>
 </head>
 <body style="background:#F8F8F8;">
@@ -219,7 +219,13 @@
 				<ul class="playTime z" style="border-bottom: 0;padding: 0.22rem 0 0.22rem 0;">
 					<li style="float: left;">
 						<img style="margin-top: 0.03rem;" src="../images/Sinatv_time.png"/>
-						<span>直播时间：{{startTime.slice(0,16)}}&nbsp;&nbsp;</span>
+						<!--multimediaType 1视频直播 2音频直播-->
+						{{if multimediaType == 2}}
+							<span>语音直播时间：{{startTime.slice(0,16)}}&nbsp;&nbsp;</span>
+						{{else}}
+							<span>直播时间：{{startTime.slice(0,16)}}&nbsp;&nbsp;</span>
+						{{/if}}
+
 						{{if lineState == 1}}
 						<p>直播中</p>
 						{{/if}}
