--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -2334,7 +2334,7 @@
 												</div>
 											</div>
 											<!--售后-->
-											<div class="order-list-right y">
+											<div class="order-list-right z">
 												<div class="ware-after-sale comment-list-style z">
 													<span>维权结束</span>
 												</div>
@@ -2429,7 +2429,7 @@
 												</div>
 											</div>
 											<!--售后-->
-											<div class="order-list-right y">
+											<div class="order-list-right z">
 												<div class="ware-after-sale comment-list-style z">
 													<span>维权结束</span>
 												</div>
